Enforce redirection